--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-<link href="css/main.css" rel="stylesheet">
-
-<p>Hey</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Appilicous</title>
+    <link href="css/main.css" rel="stylesheet" />
+  </head>
+  <body>
+    
+  </body>
+</html>
