--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="">Contact</a></li>
           </ul>
         </nav>
-        
+
       </div>
     </header>
 
@@ -44,5 +44,31 @@
       </div>
     </section>
 
+    <!-- Sales points *************************************** -->
+    <section class="sales-points">
+      <div class="container grid">
+
+        <h1>Promote your app</h1>
+
+        <div class="sales-point col">
+          <img src="./img/sales-responsive.png" alt="">
+          <h2></h2>
+          <p></p>
+        </div>
+        <div class="sales-point col">
+          <img src="./img/sales-hand.png" alt="">
+          <h2></h2>
+          <p></p>
+        </div>
+        <div class="sales-point col">
+          <img src="./img/sales-graph.png" alt="">
+          <h2></h2>
+          <p></p>
+        </div>
+
+      </div>
+    </section>
+
+    
   </body>
 </html>
