--- a/index.html
+++ b/index.html
@@ -69,6 +69,29 @@
       </div>
     </section>
 
+    <!-- Promo Section **************************************** -->
+    <section class="promo">
+      <div class="grid">
+
+        <div class="title-box">
+          <h1>This app is amazing</h1>
+          <p>It does everything you didn't know an app needed to do.</p>
+        </div>
+
+        <div class="col">
+          <h1>Doing great things for you</h1>
+          <h2>A bunch of random text</h2>
+          <p>A bunch of random text</p>
+          <a href="" class="btn btn--primary">Get the App</a>
+        </div>
+
+        <div class="col img-box">
+          <img src="./img/phone-in-hand.jpg" alt="A hand holding a phone" />
+        </div>
+
+      </div>
+    </section>
+
     
   </body>
 </html>
