Build: call to action section

--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
       </div>
     </section>
 
+    <!-- CTA ************************************************** -->
+    <section class="cta">
+      <p class="">You made it to the bottom and you still aren't sure?</p>
+      <h1 class="title-large">SHOWCASE THE GREATNESS TODAY</h1>
+      <a href="" class="btn btn--primary">Get the app</a>
+    </section>
     
   </body>
 </html>
