--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="container grid">
 
         <div class="hero-text col">
-          <h1 class="title-large">Take your app to the next level</h1>
+          <h1 class="title-large"><span>Take your app to the</span> next level</h1>
           <p class="intro">The perfect landing page for your app, whatever it might be.</p>
           <a href="" class="btn btn--secondary">Learn More</a>
           <a href="" class="btn btn--primary">Get the App</a>
@@ -98,6 +98,6 @@
       <h1 class="title-large">SHOWCASE THE GREATNESS TODAY</h1>
       <a href="" class="btn btn--primary">Get the app</a>
     </section>
-    
+
   </body>
 </html>
