--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div class="hero-text col">
           <h1 class="title-large"><span>Take your app to the</span> next level</h1>
-          <p class="intro">The perfect landing page for your app, whatever it might be.</p>
+          <p class="text-intro">The perfect landing page for your app, whatever it might be.</p>
           <a href="" class="btn btn--secondary">Learn More</a>
           <a href="" class="btn btn--primary">Get the App</a>
         </div>
@@ -94,7 +94,7 @@
 
     <!-- CTA ************************************************** -->
     <section class="cta">
-      <p class="">You made it to the bottom and you still aren't sure?</p>
+      <p class="text-large">You made it to the bottom and you still aren't sure?</p>
       <h1 class="title-large">SHOWCASE THE GREATNESS TODAY</h1>
       <a href="" class="btn btn--primary">Get the app</a>
     </section>
