--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="logo col"><img src="ing/logo.svg" alt="Appilicous logo" /></div>
         
         <nav class="main-nav col">
-          <ul class="nav-list">
+          <ul class="unstyled-list nav-list">
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Blog</a></li>
@@ -99,5 +99,28 @@
       <a href="" class="btn btn--primary">Get the app</a>
     </section>
 
+    <!-- Footer *********************************************** -->
+    <footer>
+
+      <div class="container">
+        <p>Take your app to the next level</p>
+        <ul class="unstyled-list social-links">
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+        </ul>
+      </div>
+
+      <ul class="unstyled-list nav-footer">
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Pricing</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+
+    </footer>
+    
   </body>
 </html>
