--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
       <div class="container">
         <p>Take your app to the next level</p>
         <ul class="unstyled-list social-links">
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
+          <li><a href=""><i class="fa-brands fa-square-facebook"></i></a></li>
+          <li><a href=""><i class="fa-brands fa-square-twitter"></i></a></li>
+          <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+          <li><a href=""></a><i class="fa-brands fa-square-youtube"></i></li>
         </ul>
       </div>
 
@@ -122,5 +122,6 @@
 
     </footer>
     
+    <script src="https://kit.fontawesome.com/27747f69c7.js" crossorigin="anonymous"></script>
   </body>
 </html>
