--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="main-header">
       <div class="container grid">
 
-        <div class="logo col"><img src="ing/logo.svg" alt="Appilicous logo" /></div>
+        <div class="logo col"><img src="./img/logo.svg" alt="Appilicous logo" /></div>
         
         <nav class="main-nav col">
           <ul class="unstyled-list nav-list">
